Fixed overall layout bug

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ html {
   position: relative;
   scroll-behavior: smooth;
   scroll-padding-top: 160px;
+  overflow-x: hidden;
 }
 
 @font-face {
